[tool.poetry]
name = "vkpymusic"
version = "3.0.0"
homepage = "https://github.com/issamansur/vkpymusic"
repository = "https://github.com/issamansur/vkpymusic"
description = "Python library for VK Audio (API)"
keywords = ["vk", "api", "music", "downloader", "python"]
authors = ["Issa Mansur (EDEXADE) <issa_mansur@mail.ru>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2.31.0"
aiohttp = ">=3.8.6"
aiofiles = ">=23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
