[tool.poetry]
name = "vkpymusic"
version = "4.0.0"
homepage = "https://github.com/issamansur/vkpymusic"
repository = "https://github.com/issamansur/vkpymusic"
description = "Python library for VK Audio (API)"
keywords = ["vk", "api", "music", "downloader", "python"]
authors = ["Issa Mansur (EDEXADE) <issa_mansur@mail.ru>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.34.2"
aiofiles = "^25.1.0"
selenium = "^4.44.0"
webdriver-manager = "^4.1.1"
curl-cffi = "^0.15.0"
av = "^17.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
